[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-sweeping-robot-agent"
version = "1.0.0"
description = "智扫通机器人智能客服 - 基于 LangChain ReAct Agent + RAG 的扫地机器人智能客服系统"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hu Yi"},
]

dependencies = [
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-community==0.4.1",
    "langchain-chroma==1.1.0",
    "langchain-text-splitters==1.1.2",
    "chromadb>=1.5.9",
    "dashscope>=1.25.0",
    "streamlit>=1.57.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "python-multipart>=0.0.29",
    "SQLAlchemy>=2.0.49",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "PyYAML>=6.0.3",
    "pydantic>=2.13.0",
    "pypdf>=6.11.0",
]

[project.scripts]
start-streamlit = "app:main"
start-api = "api:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
